--- a/src/Game.css
+++ b/src/Game.css
@@ -8,13 +8,14 @@
 }
 
 .form {
-  margin: 60px 0;
+  margin: 60px 30px 60px 0;
 }
 
 .controls {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .input-wrapper {
