Update score calculation

--- a/src/Header.css
+++ b/src/Header.css
@@ -2,7 +2,7 @@
   background-color: #212529;
   color: white;
   margin-bottom: 40px;
-  padding: 40px 20px;
+  padding: 40px 0;
 }
 
 .header-icons {
