--- a/src/Random.css
+++ b/src/Random.css
@@ -37,6 +37,18 @@
   border: 6px solid black;
 }
 
+.person {
+  margin-bottom: 60px !important;
+}
+
 .score-wrapper {
   margin-bottom: 30px;
+}
+
+.end-controls {
+  margin: 60px 0;
+}
+
+.person-form {
+  margin-top: 30px;
 }
